crates/sweep-engine-cli/tests/snapshots/parity__basic.snap
---
source: crates/sweep-engine-cli/tests/parity.rs
expression: "&actual"
---
{
  "candidates": [
    {
      "bytesKnown": true,
      "entryType": "directory",
      "estimatedBytes": 0,
      "id": "cand_83aa32d09099fa4d",
      "isSymlink": false,
      "kind": "node_modules",
      "name": "node_modules",
      "path": "__FIXTURE_ROOT__/node_modules",
      "reasons": [
        "default-pattern"
      ],
      "riskTier": "safe",
      "selectedByDefault": true
    },
    {
      "bytesKnown": true,
      "entryType": "file",
      "estimatedBytes": 0,
      "id": "cand_0b3e7843e19ed89a",
      "isSymlink": false,
      "kind": "tsbuildinfo",
      "name": "tsconfig.tsbuildinfo",
      "path": "__FIXTURE_ROOT__/tsconfig.tsbuildinfo",
      "reasons": [
        "default-pattern"
      ],
      "riskTier": "safe",
      "selectedByDefault": true
    }
  ],
  "createdAt": "1970-01-01T00:00:00.000Z",
  "protocolVersion": "1",
  "selectedCandidateIds": [
    "cand_83aa32d09099fa4d",
    "cand_0b3e7843e19ed89a"
  ],
  "selectionPolicy": {
    "includeDangerous": false,
    "mode": "default"
  },
  "summary": {
    "candidateCount": 2,
    "estimatedTotalBytes": 0,
    "exact": false,
    "riskCounts": {
      "blocked": 0,
      "caution": 0,
      "dangerous": 0,
      "safe": 2
    },
    "scannedDirs": 2,
    "selectedCount": 2
  },
  "targetDir": "__FIXTURE_ROOT__"
}
