crates/sweep-engine-cli/tests/snapshots/parity__risk_mix.snap
---
source: crates/sweep-engine-cli/tests/parity.rs
expression: "&actual"
---
{
  "candidates": [
    {
      "bytesKnown": true,
      "entryType": "directory",
      "estimatedBytes": 0,
      "id": "cand_83aa32d09099fa4d",
      "isSymlink": false,
      "kind": "node_modules",
      "name": "node_modules",
      "path": "__FIXTURE_ROOT__/node_modules",
      "reasons": [
        "default-pattern"
      ],
      "riskTier": "safe",
      "selectedByDefault": true
    },
    {
      "bytesKnown": true,
      "entryType": "symlink",
      "estimatedBytes": 0,
      "id": "cand_2d9120daa67af747",
      "isSymlink": true,
      "kind": "target",
      "name": "target",
      "path": "__FIXTURE_ROOT__/target",
      "reasons": [
        "symlink",
        "default-pattern"
      ],
      "riskTier": "caution",
      "selectedByDefault": false
    }
  ],
  "createdAt": "1970-01-01T00:00:00.000Z",
  "protocolVersion": "1",
  "selectedCandidateIds": [
    "cand_83aa32d09099fa4d"
  ],
  "selectionPolicy": {
    "includeDangerous": false,
    "mode": "default"
  },
  "summary": {
    "candidateCount": 2,
    "estimatedTotalBytes": 0,
    "exact": false,
    "riskCounts": {
      "blocked": 0,
      "caution": 1,
      "dangerous": 0,
      "safe": 1
    },
    "scannedDirs": 3,
    "selectedCount": 1
  },
  "targetDir": "__FIXTURE_ROOT__"
}
