crates/sweep-engine-cli/tests/snapshots/parity__workspace_matrix.snap
---
source: crates/sweep-engine-cli/tests/parity.rs
expression: "&actual"
---
{
  "candidates": [
    {
      "bytesKnown": true,
      "entryType": "directory",
      "estimatedBytes": 0,
      "id": "cand_a7288b1b2a18dedd",
      "isSymlink": false,
      "kind": ".next",
      "name": ".next",
      "path": "__FIXTURE_ROOT__/apps/docs/.next",
      "reasons": [
        "default-pattern"
      ],
      "riskTier": "safe",
      "selectedByDefault": true
    },
    {
      "bytesKnown": true,
      "entryType": "file",
      "estimatedBytes": 0,
      "id": "cand_5c43c55e52cd337d",
      "isSymlink": false,
      "kind": "tsbuildinfo",
      "name": "tsconfig.tsbuildinfo",
      "path": "__FIXTURE_ROOT__/apps/docs/tsconfig.tsbuildinfo",
      "reasons": [
        "default-pattern"
      ],
      "riskTier": "safe",
      "selectedByDefault": true
    },
    {
      "bytesKnown": true,
      "entryType": "directory",
      "estimatedBytes": 0,
      "id": "cand_5426091b52c830a3",
      "isSymlink": false,
      "kind": "target",
      "name": "target",
      "path": "__FIXTURE_ROOT__/packages/api/target",
      "reasons": [
        "default-pattern"
      ],
      "riskTier": "safe",
      "selectedByDefault": true
    },
    {
      "bytesKnown": true,
      "entryType": "directory",
      "estimatedBytes": 0,
      "id": "cand_2a2d8f17594bd811",
      "isSymlink": false,
      "kind": "node_modules",
      "name": "node_modules",
      "path": "__FIXTURE_ROOT__/packages/web/node_modules",
      "reasons": [
        "default-pattern"
      ],
      "riskTier": "safe",
      "selectedByDefault": true
    }
  ],
  "createdAt": "1970-01-01T00:00:00.000Z",
  "protocolVersion": "1",
  "selectedCandidateIds": [
    "cand_a7288b1b2a18dedd",
    "cand_5c43c55e52cd337d",
    "cand_5426091b52c830a3",
    "cand_2a2d8f17594bd811"
  ],
  "selectionPolicy": {
    "includeDangerous": false,
    "mode": "default"
  },
  "summary": {
    "candidateCount": 4,
    "estimatedTotalBytes": 0,
    "exact": false,
    "riskCounts": {
      "blocked": 0,
      "caution": 0,
      "dangerous": 0,
      "safe": 4
    },
    "scannedDirs": 7,
    "selectedCount": 4
  },
  "targetDir": "__FIXTURE_ROOT__"
}
